fixed weird spacing

--- a/client/src/views/GovernanceMain.scss
+++ b/client/src/views/GovernanceMain.scss
@@ -77,6 +77,7 @@
     line-height: 36px;
     letter-spacing: 0.03em;
     font-weight: bold;
+    margin: 0;
     &.year {
       color: #60246c;
     }
